Fix TR tag missing

--- a/src/main/resources/org/sonar/l10n/hanger.properties
+++ b/src/main/resources/org/sonar/l10n/hanger.properties
@@ -1,2 +1,2 @@
-widget.hanger.name=Technical Debt Authors
-widget.hanger.header.debt=Technical Debt
+widget.hanger.name=technical Debt Authors
+widget.hanger.debt=technical Debt
