Add debt-ratio-widget and commits-widget to the project

--- a/src/main/resources/org/sonar/l10n/hanger.properties
+++ b/src/main/resources/org/sonar/l10n/hanger.properties
@@ -1,2 +1,18 @@
-widget.hanger.name=technical Debt Authors
-widget.hanger.debt=technical Debt
+widget.hanger.debtRatio.name=Technical Debt Ratio Authors
+widget.hanger.debtRatio.commits=Commits
+widget.hanger.debtRatio.debt=Debt
+widget.hanger.debtRatio.ratio=Ratio
+widget.hanger.debtRatio.first=First
+widget.hanger.debtRatio.last=Last
+
+widget.hanger.debt.name=Technical Debt Authors
+widget.hanger.debt.debt=Technical Debt
+
+widget.hanger.commits.name=Authors Commits
+widget.hanger.commits.commits=Commits
+widget.hanger.commits.first=First commit
+widget.hanger.commits.last=Last commit
+
+widget.hanger.loading.process=Processing resources
+widget.hanger.loading.wait=Waiting for
+widget.hanger.loading.sec=Sec
